added some stuff to the expose

--- a/src/main/latex/expose.tex
+++ b/src/main/latex/expose.tex
@@ -1,10 +1,21 @@
-\documentclass{article}
+\documentclass[a4paper]{article}
 \usepackage[utf8]{inputenc}
-\title{Exposé}
+\usepackage{fullpage}
+\title{Concept for a game prototype}
 \author{Willi Schönborn}
 \date{\today}
 \begin{document}
 \maketitle
+
+\section*{Introduction}
+This is some kind of test. How can i break before this paragraph? Even more important, how can i change the whole layout?
+
+\section*{Game Adaption}
+The original game is called PewPew and is currently available for the iPhone and Android platforms.
+
+\section*{Goals}
+
+\section*{Nothing important here}
 
 \end{document}
 
