--- a/src/main/latex/expose.tex
+++ b/src/main/latex/expose.tex
@@ -22,7 +22,7 @@ The idea is a partial port of a 2D arcade space shooter game available for mobil
 \caption{Visual appearance}
 \end{figure}
 
-PewPew ships with several different game modes, levels and enemy types. The core game concept is extremely simple though: The Player has two virtual joysticks which can be used to control the movement of the ship and the direction of the fire. Despite the fact that the game has several game modes, it's usually boils down to avoid collisions and destroy enemies with the ship's gun. The game uses extremely simple vector and wireframe graphics extensively with the effect of a very harmonious visual appearance.
+PewPew ships with several different game modes, levels and enemy types. The core game concept is extremely simple though: The Player has two virtual joysticks which can be used to control the movement of the ship and the direction of the fire. Despite the fact that the game has several game modes, it usually boils down to avoiding collisions and destroying enemies with the ship's gun. The game uses extremely simple vector and wireframe graphics extensively with the effect of a very harmonious visual appearance.
 
 \newpage
 
