--- a/src/main/latex/expose.bib
+++ b/src/main/latex/expose.bib
@@ -13,9 +13,14 @@
   url = {http://iphoneappcafe.com/pewpew-all-the-excitement-of-an-80s-arcade-game/}
 }
 @ONLINE{androidear,
-  author = {androidear},
   title = {PewPew für Android erinnert mich an Geometry Wars},
   month = may,
   year = {2011},
   url = {http://www.androidear.com/news/pewpew-for-android-reminds-me-of-geometry-wars-video/?lang=de}
+}
+@ONLINE{jinput,
+  title = {Jinput},
+  month = may,
+  year = {2011},
+  url = {http://java.net/projects/jinput/}
 }
