added references and list of figures to toc

--- a/src/main/latex/documentation.tex
+++ b/src/main/latex/documentation.tex
@@ -31,7 +31,9 @@
 \newpage
 \nocite{pewpewgame}
 \nocite{jinput}
+\addcontentsline{toc}{section}{References}
 \printbibliography
+\addcontentsline{toc}{section}{List of Figures}
 \listoffigures
 
 \end{document}
