added more content to documentation

--- a/src/main/latex/documentation.bib
+++ b/src/main/latex/documentation.bib
@@ -1,13 +1,35 @@
 @ONLINE{pewpewgame,
-  author = {Geyelin, Jean-François},
-  title = {PewPew Developer Blog},
-  month = may,
-  year = {2011},
-  url = {http://pewpewgame.blogspot.com/}
+author = {Geyelin, Jean-François},
+title = {PewPew Developer Blog},
+month = jul,
+year = {2011},
+url = {http://pewpewgame.blogspot.com/}
 }
 @ONLINE{jinput,
-  title = {Jinput},
-  month = may,
-  year = {2011},
-  url = {http://java.net/projects/jinput/}
+title = {Jinput},
+month = jul,
+year = {2011},
+url = {http://java.net/projects/jinput/}
+}
+@ONLINE{scala,
+title = {The Scala Programming Language},
+month = jul,
+year = {2011},
+url = {http://www.scala-lang.org/}
+}
+@ONLINE{jbullet,
+title = {JBullet - Java port of Bullet Physics Library},
+month = jul,
+year = {2011},
+url = {http://jbullet.advel.cz/}
+}
+@BOOK{BaileyCunningham200905, 
+title={Graphics Shaders: Theory and Practice},
+author={Mike Bailey and Steve Cunningham},
+publisher={A K Peters},
+year={2009},
+month={5},
+isbn={9781568813349},
+totalpages={375},
+timestamp={2011.07.10},
 }
